Convert functions to kotlin in new package