@@ -13,6 +13,8 @@ dependencies {
     implementation 'com.miglayout:miglayout-swing:11.4.2'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:2.1.21"
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:5.12.0'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.4.0'
 }
 
 sourceSets {
@@ -39,4 +41,8 @@ tasks.register('runHackerServer', JavaExec) {
     mainClass = 'server.HackerServer'
     args '1'
     workingDir = rootProject.ext.resourcesRootDir
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs '-Dnet.bytebuddy.experimental=true'
 }
